--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -54,6 +54,7 @@
                 android:layout_width="30dp"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_ellipses"
+                android:id="@+id/settings"
                 android:layout_marginEnd="20dp"
                 android:tint="@color/white"/>
         </LinearLayout>
