--- a/app/src/main/res/layout/bottom_sheet_group_settings.xml
+++ b/app/src/main/res/layout/bottom_sheet_group_settings.xml
@@ -4,7 +4,7 @@
     android:minHeight="50dp"
     android:orientation="vertical"
     android:paddingTop="20dp"
-
+    android:background="@color/background"
     android:paddingBottom="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
