--- a/app/src/main/res/layout/layout_item_message_left.xml
+++ b/app/src/main/res/layout/layout_item_message_left.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content"
         android:text=""
         android:textAlignment="center"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
         android:fontFamily="@font/work_sans_regular"
         android:id="@+id/messageDateLeft"/>
 
@@ -33,6 +35,9 @@
             android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:layout_marginBottom="10dp"
+
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
             android:textColor="@color/white"
             android:fontFamily="@font/work_sans_regular"
             android:textSize="16sp"/>
