--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -71,78 +71,115 @@
         android:layout_marginTop="50dp"
         android:id="@+id/messageRecycler"
         android:layout_marginBottom="50dp"/>
+
     <LinearLayout
         android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
         android:layout_height="wrap_content"
+        android:background="@drawable/bg_top_line"
         android:minHeight="50dp"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
-        android:background="@color/background"
-        android:orientation="horizontal"
-        android:layout_alignParentBottom="true">
+        android:orientation="vertical">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="50dp"
-            android:background="@drawable/bg_message_input"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="65dp">
-            <EditText
+            android:id="@+id/replyBanner"
+            android:visibility="gone"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_forward"
+                android:tint="@color/placeholder"
+                android:rotation="180"
+                android:layout_marginStart="20dp"/>
+
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:id="@+id/messageInput"
-                android:hint="Type your message here!"
+                android:text=""
+                android:layout_marginEnd="50dp"
+                android:lines="1"
+                android:ellipsize="end"
+                android:id="@+id/textReply"
+                android:textColor="@color/placeholder"
                 android:fontFamily="@font/work_sans_regular"
-                android:textColor="@color/white"
-                android:textColorHint="@color/placeholder"
-                android:layout_centerVertical="true"
-                android:textSize="15sp"
-                android:backgroundTint="@android:color/transparent"/>
-        </RelativeLayout>
+                android:layout_gravity="center_vertical"
+                android:textSize="13sp"/>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            app:cardCornerRadius="50dp"
-            android:layout_marginStart="-55dp"
-            android:id="@+id/send"
-            android:visibility="gone"
-            app:cardBackgroundColor="@color/primary"
-            android:layout_gravity="center_vertical">
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:src="@drawable/ic_arrow"
-                android:layout_gravity="center"
-                android:tint="@color/white"
-                android:id="@+id/arrow"
-                android:rotation="180"/>
-        </androidx.cardview.widget.CardView>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                android:background="@drawable/bg_message_input"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="65dp">
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="15dp"
+                    android:layout_marginEnd="15dp"
+                    android:id="@+id/messageInput"
+                    android:hint="Type your message here!"
+                    android:fontFamily="@font/work_sans_regular"
+                    android:textColor="@color/white"
+                    android:textColorHint="@color/placeholder"
+                    android:layout_centerVertical="true"
+                    android:textSize="15sp"
+                    android:backgroundTint="@android:color/transparent"/>
+            </RelativeLayout>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:cardCornerRadius="50dp"
-            android:id="@+id/gallery"
-            android:visibility="visible"
-            app:cardBackgroundColor="@color/input"
-
-            android:layout_marginStart="-55dp"
-            android:layout_gravity="center_vertical">
-
-            <ImageView
+            <androidx.cardview.widget.CardView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@drawable/ic_gallery"
-                android:layout_gravity="center"
-                android:tint="@color/white"/>
-        </androidx.cardview.widget.CardView>
+                app:cardCornerRadius="50dp"
+                android:layout_marginStart="-55dp"
+                android:id="@+id/send"
+                android:visibility="gone"
+                app:cardBackgroundColor="@color/primary"
+                android:layout_gravity="center_vertical">
 
+                <ImageView
+                    android:layout_width="38dp"
+                    android:layout_height="38dp"
+                    android:src="@drawable/ic_arrow"
+                    android:layout_gravity="center"
+                    android:tint="@color/white"
+                    android:id="@+id/arrow"
+                    android:rotation="180"/>
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:cardCornerRadius="50dp"
+                android:id="@+id/gallery"
+                android:visibility="visible"
+                app:cardBackgroundColor="@color/input"
+
+                android:layout_marginStart="-55dp"
+                android:layout_gravity="center_vertical">
+
+                <ImageView
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:src="@drawable/ic_gallery"
+                    android:layout_gravity="center"
+                    android:tint="@color/placeholder"/>
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
     </LinearLayout>
+
 
     <FrameLayout
         android:layout_width="match_parent"
