--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -74,6 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:id="@+id/switchPrivate"
             android:layout_marginEnd="15dp"
             android:thumb="@drawable/custom_thumb"
             app:track="@drawable/custom_track"/>
@@ -109,6 +110,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="15dp"
+            android:id="@+id/switchAuthorizeComments"
             android:checked="true"
             android:thumb="@drawable/custom_thumb"
             app:track="@drawable/custom_track"/>
@@ -145,6 +147,7 @@
             android:layout_gravity="center_vertical"
             android:layout_marginEnd="15dp"
             android:checked="true"
+            android:id="@+id/switchAuthorizeShares"
             android:thumb="@drawable/custom_thumb"
             app:track="@drawable/custom_track"/>
 
@@ -163,4 +166,15 @@
         android:textSize="18sp"
         android:id="@+id/save"/>
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        app:indicatorColor="@color/white"
+        android:min="0"
+        android:max="100"
+        android:id="@+id/progress_bar"
+        app:trackThickness="1dp"
+        android:visibility="gone"/>
 </LinearLayout>
