--- a/app/src/main/res/layout/fragment_view_moment.xml
+++ b/app/src/main/res/layout/fragment_view_moment.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/black"
+    android:clickable="true"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <RelativeLayout
@@ -18,9 +20,38 @@
             android:layout_marginStart="15dp"/>
     </RelativeLayout>
 
-    <com.google.android.exoplayer2.ui.PlayerView
+    <VideoView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/playerView"/>
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+
+        android:id="@+id/videoView"/>
+
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/selectVideo"
+        android:layout_margin="25dp">
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:backgroundTint="@color/primary"
+            android:clickable="false"
+            android:focusable="false"
+            android:contentDescription="@string/img_description" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_check"
+            android:tint="@color/white"
+            android:elevation="12dp"
+            android:contentDescription="@string/img_description"
+            android:layout_centerInParent="true"/>
+
+    </RelativeLayout>
 
 </RelativeLayout>
